--- a/main.css
+++ b/main.css
@@ -1,15 +1,25 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{-webkit-text-size-adjust:100%;line-height:1.15}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}[hidden],template{display:none}
 .base{--font:"Franklin Gothic Medium","Arial Narrow",Arial,sans-serif;align-items:center;background-color:#fff;display:flex;flex-direction:column;min-height:100vh;width:100%}
-.header{align-items:center;border-bottom:1px solid gray;display:flex;justify-content:space-between;width:60%}
-.header__title{font-family:var(--font)}
+.header{align-items:center;background-color:#fff;border-bottom:1px solid gray;display:flex;justify-content:space-between;position:sticky;top:0;width:60%}
+.header__title{font-family:var(--font);transition:color .2s}.header__title:hover{color:red;cursor:pointer;text-shadow:0 0 5px #000}
 .header__nav{display:flex;flex-direction:row;justify-content:space-around;width:50%}
 .header__nav-button{background-color:transparent;border:none;cursor:pointer;font-family:var(--font);font-size:1.5em;font-weight:700}.header__nav-button:hover{color:gray}
 .header__nav-button_selected{cursor:default;text-decoration:underline}.header__nav-button_selected:hover{color:#000}
 .main{align-items:center;box-sizing:border-box;display:flex;flex-direction:column;padding:2vh 0;width:60%}
-.section{display:grid;gap:1%;grid-auto-rows:15vw;grid-template-columns:repeat(4,1fr);grid-template-rows:15vw;width:98%}
-.article{align-items:center;display:flex;flex-direction:column;height:auto;width:100%}.article:hover .article__title{color:gray}
-.article__image{cursor:pointer;height:80%;-o-object-fit:cover;object-fit:cover;overflow:hidden;width:100%}
-.article__title{cursor:pointer;font-family:var(--font);margin:0;text-align:center}
-.footer{border-top:1px solid gray;display:flex;justify-content:end;width:60%}
+.section{width:98%}
+.section_hall_prime{display:grid;gap:1vh;grid-auto-rows:15vw;grid-template-columns:repeat(4,1fr);grid-template-rows:15vw}
+.section_hall_exhibition{align-items:center;display:flex;flex-direction:column}
+.article{align-items:center;animation:enter .3s ease-out normal forwards;display:flex;flex-direction:column;height:auto;width:100%};@keyframes enter{0%{opacity:.5;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
+.article_type_responsive{cursor:pointer}.article_type_responsive:hover .article__title{color:gray}
+.article_type_poster{align-items:flex-end;margin-bottom:2vh}
+.article_type_explication{background-color:#f0f8ff;margin-bottom:2vh}
+.article_type_exposition{box-sizing:border-box;display:grid;gap:1vh;grid-auto-rows:15vw;grid-template-columns:repeat(4,1fr);grid-template-rows:15vw}
+.article__cover{height:84%;overflow:hidden;width:100%}
+.article__image{height:84%;-o-object-fit:cover;object-fit:cover;overflow:hidden;width:100%}
+.article__span{color:#8a2be2;font-family:var(--font)}
+.article__title{font-family:var(--font);margin:0;text-align:center}
+.article__text{font-family:var(--font)}
+.article__text-cover{color:#adff2f;font-family:var(--font);margin:0;text-align:center;transform:scale(1.5)}
+.footer{border-top:1px solid gray;display:flex;justify-content:flex-end;width:60%}
 .footer__signature{font-family:var(--font)}
 
