--- a/blocks/article/article.css
+++ b/blocks/article/article.css
@@ -4,8 +4,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+    animation: enter 0.3s ease-out normal forwards;
+};
 
-.article:hover .article__title {
-    color: gray;
-}
+@keyframes enter {
+    0% {
+        transform: scale(0.95);
+        opacity: 0.5;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+};
