--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,3 +1,10 @@
 .header__title {
     font-family: var(--font);
+    transition: color 0.2s;
+}
+
+.header__title:hover {
+    color: red;
+    text-shadow: 0 0 5px black;
+    cursor: pointer;
 }
