--- a/main.css
+++ b/main.css
@@ -1,25 +1,38 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{-webkit-text-size-adjust:100%;line-height:1.15}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}[hidden],template{display:none}
-.base{--font:"Franklin Gothic Medium","Arial Narrow",Arial,sans-serif;align-items:center;background-color:#fff;display:flex;flex-direction:column;min-height:100vh;width:100%}
-.header{align-items:center;background-color:#fff;border-bottom:1px solid gray;display:flex;justify-content:space-between;position:sticky;top:0;width:60%}
-.header__title{font-family:var(--font);transition:color .2s}.header__title:hover{color:red;cursor:pointer;text-shadow:0 0 5px #000}
-.header__nav{display:flex;flex-direction:row;justify-content:space-around;width:50%}
-.header__nav-button{background-color:transparent;border:none;cursor:pointer;font-family:var(--font);font-size:1.5em;font-weight:700}.header__nav-button:hover{color:gray}
-.header__nav-button_selected{cursor:default;text-decoration:underline}.header__nav-button_selected:hover{color:#000}
-.main{align-items:center;box-sizing:border-box;display:flex;flex-direction:column;padding:2vh 0;width:60%}
-.section{width:98%}
-.section_hall_prime{display:grid;gap:1vh;grid-auto-rows:15vw;grid-template-columns:repeat(4,1fr);grid-template-rows:15vw}
+.base{--font:"Lucida Sans","Lucida Sans Regular","Lucida Grande","Lucida Sans Unicode",Geneva,Verdana,sans-serif;--fon:#e2e3ec;--fon2:#fff;--text:#000;--border:gray;--color1:#73008a;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;align-items:center;background-color:var(--fon);display:flex;flex-direction:column;text-rendering:optimizeLegibility;width:98.5vw}
+.header{align-items:center;background-color:var(--fon);border-bottom:1px solid var(--border);box-sizing:border-box;display:flex;justify-content:space-between;padding:1vh 0;position:sticky;top:0;width:50%;z-index:1}
+.header__title{background-color:transparent;border:none;color:var(--text);font-family:var(--font);font-size:1.5rem;font-weight:lighter;text-transform:lowercase;transition:color .2s}.header__title:hover{color:var(--color1);cursor:pointer;text-shadow:0 0 5px #bf00c5}
+.header__nav{display:flex;flex-direction:row;justify-content:space-between;width:60%}
+.header__nav-button{background-color:transparent;border:none;color:var(--text);cursor:pointer;font-family:var(--font);font-size:1.2rem;font-weight:lighter;text-transform:lowercase}.header__nav-button:hover{color:gray}
+.header__nav-button_selected{cursor:default;text-decoration:underline}.header__nav-button_selected:hover{color:var(--text)}
+.main{align-items:center;box-sizing:border-box;color:var(--text);display:flex;flex-direction:column;padding:2vh 0;width:50%}
+.section{animation:enter .4s ease-out normal forwards running;width:98%}@keyframes enter{0%{opacity:0}to{opacity:1}}
+.section_hall_prime{display:grid;gap:1vh;grid-auto-rows:calc(12.3125vw - 1.25vh);grid-template-columns:repeat(4,1fr);grid-template-rows:calc(12.3125vw - 1.25vh)}.section_hall_prime .article__title{color:var(--fon2)}
+.section_hall_library{display:grid;gap:1vh;grid-auto-rows:auto;grid-template-columns:1fr;grid-template-rows:auto}.section_hall_library .article__title{color:var(--text)}
 .section_hall_exhibition{align-items:center;display:flex;flex-direction:column}
-.article{align-items:center;animation:enter .3s ease-out normal forwards;display:flex;flex-direction:column;height:auto;width:100%};@keyframes enter{0%{opacity:.5;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-.article_type_responsive{cursor:pointer}.article_type_responsive:hover .article__title{color:gray}
-.article_type_poster{align-items:flex-end;margin-bottom:2vh}
-.article_type_explication{background-color:#f0f8ff;margin-bottom:2vh}
-.article_type_exposition{box-sizing:border-box;display:grid;gap:1vh;grid-auto-rows:15vw;grid-template-columns:repeat(4,1fr);grid-template-rows:15vw}
-.article__cover{height:84%;overflow:hidden;width:100%}
-.article__image{height:84%;-o-object-fit:cover;object-fit:cover;overflow:hidden;width:100%}
-.article__span{color:#8a2be2;font-family:var(--font)}
-.article__title{font-family:var(--font);margin:0;text-align:center}
-.article__text{font-family:var(--font)}
-.article__text-cover{color:#adff2f;font-family:var(--font);margin:0;text-align:center;transform:scale(1.5)}
-.footer{border-top:1px solid gray;display:flex;justify-content:flex-end;width:60%}
-.footer__signature{font-family:var(--font)}
+.article{display:flex;flex-direction:column;height:auto;position:relative;width:100%};
+.article_type_responsive{cursor:pointer}.article_type_responsive:hover .article__plug{opacity:1}.article_type_responsive:hover .article__title{color:var(--fon2)}
+.article_type_header{align-items:center;margin-bottom:2vh}
+.article_type_explication{box-sizing:border-box;display:flex;flex-direction:column;flex-wrap:wrap;height:auto;justify-content:flex-start;margin:2vh 0;max-height:50vh}.article_type_explication:last-child{margin-top:auto}
+.article_type_exposition{box-sizing:border-box;display:grid;gap:1vh;grid-auto-rows:calc(12.3125vw - 1.25vh);grid-template-columns:repeat(4,1fr);grid-template-rows:calc(12.3125vw - 1.25vh)}
+.article__cover{height:100%;overflow:hidden;width:100%}
+.article__image{cursor:pointer;height:100%;-o-object-fit:cover;object-fit:cover;overflow:hidden;width:100%}
+.article__span{color:#5a5a5a;font-family:var(--font);font-size:.8rem}
+.article__title{font-family:var(--font);font-size:1rem;font-weight:lighter;margin:0;z-index:1}
+.article__text{font-family:var(--font);font-size:.9rem;font-weight:lighter;margin:0 0 1vh;width:calc(50% - .5vh)}
+.article__text_style_italic{font-style:italic}
+.article__text-cover{background-color:var(--fon2);color:var(--fon);font-family:var(--font);margin:0;text-align:center;transform:scaleX(2) translateY(-1vh)}
+.article__plug{align-items:flex-start;background-color:var(--color1);box-sizing:border-box;cursor:pointer;display:flex;height:100%;opacity:0;padding:1vh;position:absolute;transition:opacity .3s;width:100%}
+.office__text{align-self:start;font-family:var(--font);font-size:.8rem;margin:0 0 1vh}
+.office__contacts{align-self:start}
+.office__list{list-style-type:none;margin:0 0 1vh;padding:0}
+.popup{align-items:center;background-color:var(--fon);display:flex;height:100vh;justify-content:center;opacity:0;position:fixed;transition:opacity .4s;width:100%;z-index:-1}
+.popup_opened{opacity:1;z-index:2}
+.popup__screen{align-items:flex-end;display:flex;flex-direction:column;height:80vh;max-width:70%}
+.popup__image{height:100%;-o-object-fit:contain;object-fit:contain;width:100%}
+.footer{border-top:1px solid gray;display:flex;justify-content:flex-end;width:50%}
+.footer__signature{color:var(--text);font-family:var(--font)}
+.close-button{background-color:#000;height:20px;position:absolute;right:7vw;top:10vh;width:20px}
+.link{color:gray;text-decoration:none}
+.test{animation-play-state:running}
 
