--- a/blocks/article/__text-cover/article__text-cover.css
+++ b/blocks/article/__text-cover/article__text-cover.css
@@ -1,7 +1,8 @@
 .article__text-cover {
     margin: 0;
+    background-color: var(--fon2);
     text-align: center;
     font-family: var(--font);
-    color: greenyellow;
-    transform: scale(1.5);
+    color: var(--fon);
+    transform: scaleX(2) translate(0, -1vh);
 }
