--- a/blocks/article/__title/article__title.css
+++ b/blocks/article/__title/article__title.css
@@ -1,5 +1,7 @@
 .article__title {
     margin: 0;
+    font-size: 1rem;
     font-family: var(--font);
-    text-align: center;
+    font-weight: lighter;
+    z-index: 1;
 }
