--- a/blocks/article/_type/article_type_explication.css
+++ b/blocks/article/_type/article_type_explication.css
@@ -1,4 +1,14 @@
 .article_type_explication {
-    background-color: aliceblue;
-    margin-bottom: 2vh;
+    height: auto;
+    max-height: 50vh;
+    margin: 2vh 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.article_type_explication:last-child {
+    margin-top: auto;
 }
