--- a/blocks/article/article.css
+++ b/blocks/article/article.css
@@ -3,17 +3,5 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    animation: enter 0.3s ease-out normal forwards;
-};
-
-@keyframes enter {
-    0% {
-        transform: scale(0.95);
-        opacity: 0.5;
-    }
-    100% {
-        transform: scale(1);
-        opacity: 1;
-    }
+    position: relative;
 };
