--- a/blocks/base/base.css
+++ b/blocks/base/base.css
@@ -1,9 +1,19 @@
 .base {
-    width: 100%;
-    min-height: 100vh;
-    background-color: #fff;
+    width: 98.5vw;
+    background-color: var(--fon);
     display: flex;
     flex-direction: column;
     align-items: center;
-    --font: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    --font: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    --fon: #e2e3ec;
+    --fon2: rgb(255, 255, 255);
+    --text: black;
+    --border: gray;
+    --color1: rgb(115, 0, 138);
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
 }
