--- a/blocks/header/__nav/header__nav.css
+++ b/blocks/header/__nav/header__nav.css
@@ -1,6 +1,6 @@
 .header__nav {
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 }
