--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,10 +1,16 @@
 .header__title {
+    background-color: transparent;
+    border: none;
+    text-transform: lowercase;
+    font-size: 1.5rem;
     font-family: var(--font);
+    font-weight: lighter;
+    color: var(--text);
     transition: color 0.2s;
 }
 
 .header__title:hover {
-    color: red;
-    text-shadow: 0 0 5px black;
+    color: var(--color1);
+    text-shadow: 0 0 5px rgb(191, 0, 197);
     cursor: pointer;
 }
