--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,10 +1,13 @@
 .header {
-    width: 60%;
-    border-bottom: 1px solid gray;
-    background-color: white;
+    width: 50%;
+    padding: 1vh 0;
+    border-bottom: 1px solid var(--border);
+    box-sizing: border-box;
+    background-color: var(--fon);
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
