--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,8 +1,9 @@
 .main {
-    width: 60%;
+    width: 50%;
     padding: 2vh 0;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: var(--text);
 }
