--- a/blocks/section/_hall/section_hall_prime.css
+++ b/blocks/section/_hall/section_hall_prime.css
@@ -1,7 +1,11 @@
 .section_hall_prime {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: calc(60vw/4);
-    grid-auto-rows: calc(60vw/4);
+    grid-template-rows: calc((98.5vw * 50 / 100 - (1vh * 5)) / 4);
+    grid-auto-rows: calc((98.5vw * 50 / 100 - (1vh * 5)) / 4);
     gap: 1vh;
+}
+
+.section_hall_prime .article__title {
+    color: var(--fon2);
 }
